--- a/inmoov/inmoov_qt.ui
+++ b/inmoov/inmoov_qt.ui
@@ -63,7 +63,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>4</number>
+       <number>0</number>
       </property>
       <property name="usesScrollButtons">
        <bool>true</bool>
@@ -265,6 +265,9 @@ color: rgb(255, 255, 255);</string>
             <widget class="QLineEdit" name="R_edit_host">
              <property name="inputMask">
               <string/>
+             </property>
+             <property name="text">
+              <string>192.168.0.15</string>
              </property>
             </widget>
            </item>
